crates/turborepo/tests/snapshots/persistent_dependencies__test_10_concurrency_2_env.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x You have 2 persistent tasks but `turbo` is configured for
        | concurrency of 2. Set `--concurrency` to at least 3 or configure
        | `"concurrency"` in `turbo.json`
