crates/turborepo/tests/snapshots/persistent_dependencies__test_2_same_workspace.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x "app-a#dev" is a persistent task, "app-a#build" cannot depend on it
         ,-[turbo.json:5:21]
       4 |     "build": {
       5 |       "dependsOn": ["dev"]
         :                     ^^|^^
         :                       `-- persistent task
       6 |     },
         `----
