crates/turborepo/tests/snapshots/persistent_dependencies__test_3_workspace_specific.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  |->   x "pkg-a#dev" is a persistent task, "app-a#build" cannot depend on it
  |      ,-[turbo.json:5:21]
  |    4 |     "build": {
  |    5 |       "dependsOn": ["pkg-a#dev"]
  |      :                     ^^^^^|^^^^^
  |      :                          `-- persistent task
  |    6 |     },
  |      `----
  `->   x "pkg-a#dev" is a persistent task, "pkg-a#build" cannot depend on it
         ,-[turbo.json:5:21]
       4 |     "build": {
       5 |       "dependsOn": ["pkg-a#dev"]
         :                     ^^^^^|^^^^^
         :                          `-- persistent task
       6 |     },
         `----
