crates/turborepo/tests/snapshots/persistent_dependencies__test_4_cross_workspace.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x "pkg-a#dev" is a persistent task, "app-a#dev" cannot depend on it
         ,-[turbo.json:5:21]
       4 |     "app-a#dev": {
       5 |       "dependsOn": ["pkg-a#dev"],
         :                     ^^^^^|^^^^^
         :                          `-- persistent task
       6 |       "persistent": true
         `----
