crates/turborepo/tests/snapshots/persistent_dependencies__test_5_root_workspace.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x "//#dev" is a persistent task, "app-a#build" cannot depend on it
         ,-[turbo.json:5:21]
       4 |     "build": {
       5 |       "dependsOn": ["//#dev"],
         :                     ^^^^|^^^
         :                         `-- persistent task
       6 |       "persistent": true
         `----
