crates/turborepo/tests/snapshots/persistent_dependencies__test_6_topological_unimplemented.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stdout.to_string()
---
   • Packages in scope: app-a, pkg-a
   • Running dev in 2 packages
   • Remote caching disabled

app-a:dev: cache miss, executing 7def3a3e7f1235de
app-a:dev: 
app-a:dev: > dev
app-a:dev: > echo dev-app-a
app-a:dev: 
app-a:dev: dev-app-a

 Tasks:    1 successful, 1 total
Cached:    0 cached, 1 total
  Time:    [TIME]
