crates/turborepo/tests/snapshots/persistent_dependencies__test_7_topological_nested.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x "pkg-b#dev" is a persistent task, "pkg-a#dev" cannot depend on it
         ,-[turbo.json:5:21]
       4 |     "dev": {
       5 |       "dependsOn": ["^dev"],
         :                     ^^^|^^
         :                        `-- persistent task
       6 |       "persistent": true
         `----
