crates/turborepo/tests/snapshots/persistent_dependencies__test_9_cross_workspace_nested.snap
---
source: crates/turborepo/tests/persistent_dependencies.rs
expression: stderr.to_string()
---
  x Invalid task configuration
  `->   x "app-z#dev" is a persistent task, "app-c#build" cannot depend on it
          ,-[turbo.json:13:21]
       12 |     "app-c#build": {
       13 |       "dependsOn": ["app-z#dev"]
          :                     ^^^^^|^^^^^
          :                          `-- persistent task
       14 |     },
          `----
